# corbit-2

./: #Continue loop.cpp  .CMakeLists.txt.swp  .gitignore  .readme.md.swp  .~lock.Corbit.doc#  AMURICA.txt  ARRAYCEPTION.cpp  BUILD  CMakeLists.txt  ChangesLog.txt  Copy of corbit.cpp  Corbit - Copy.cbp  Corbit.cbp  Corbit.depend  Corbit.doc  Corbit.docx  Corbit.layout  Corbit.layout.cbTemp  Corbit.odt  CorbitFixed.depend  CorbitFixed.layout  CorbitFixed.layout.cbTemp  For You.cpp  ICS3U Unit 3 Online Test.doc  LICENSE.txt  Matrices 3.06a.cpp  Matrix test.cpp  OCESS.json  PATRICK_MELANSON_AUDITORIUM.cpp  PATRICK_MELANSON_CHANGE.cpp  PATRICK_MELANSON_COUNTRIES.cpp  PATRICK_MELANSON_FUNNY.cpp  PATRICK_MELANSON_MATRICES (LISG-CSX-87115's conflicted copy 2012-02-23).cpp  PATRICK_MELANSON_MATRICES.cpp  PATRICK_MELANSON_RECTANGLES.cpp  PATRICK_MELANSON_TEST.cpp  PATRICK_MELANSON_TRUCKING.cpp  PATRICK_MELANSON_TRUCKING_PLAN.doc  PATRICK_MELANSON_WEATHER.cpp  PATRICK_MELANSON_YAHTZEE.cpp  (+73 more)
Allegro/: Lesson6 Timers.cpp  WHAT IS BLIT.cpp  lesson1 Getting Started.cpp  lesson2 Bitmaps.cpp  lesson3 Keyboard input.cpp  lesson4 Masked Blitting, Sprites.cpp  lesson5 Double Buffering.cpp  lesson7 Sprite Animiation.cpp  lesson8 Collision Detection.cpp  lesson9 Datafiles.cpp  main.cpp  racing car.cpp  trying again.cpp  whatwhat.cpp  where doing man.cpp
Corbit/: Corbit.cbp  Corbit.depend  Corbit.layout  version.h
CorbitFixed/: CorbitFixed.cbp  CorbitFixed.depend  CorbitFixed.layout  classDeclarations.h  corbitFixed.cpp  entities.txt  readme.md  version.h
PATRICK_MELANSON_MATRICES/: PATRICK_MELANSON_MATRICES.cpp  matrix 3x3.txt  matrix 4x3 3x4.txt
PATRICK_MELANSON_TEST/: magic square 3x3.txt  magic square 4x4.txt  magic square 5x5.txt  magic square 6x6.txt  magic square 7x7.txt  magic square 8x8.txt
PATRICK_MELANSON_TEXTFILES/: PATRICK_MELANSON_COUNTRIES.cpp  PATRICK_MELANSON_DATA.txt
SpaceFight/: Character.cpp  Character.h  Laser.cpp  Laser.h  Ship.cpp  Ship.h  main.cpp
Summative/: ChangesLog.txt  (+7 more)
(+52 files in other folders)
